# fASP

./: README.md  pyproject.toml
dataset/Random/: 100_4379_60916.bnet  101_4590_37682.bnet  102_3371_20188.bnet  103_4718_36821.bnet  104_1859_10117.bnet  105_1208_5852.bnet  106_3107_15638.bnet  107_2914_40558.bnet  108_1042_5461.bnet  109_1476_7742.bnet  10_1881_17747.bnet  110_2045_10753.bnet  111_2386_31855.bnet  112_1856_5960.bnet  113_2522_26814.bnet  114_1479_7098.bnet  115_3884_51742.bnet  116_1433_7017.bnet  117_2602_12910.bnet  118_1472_8800.bnet  119_979_5518.bnet  11_1280_18165.bnet  120_3690_26267.bnet  121_1002_8553.bnet  122_4688_43349.bnet  123_3846_37946.bnet  124_2183_12938.bnet  125_2338_20154.bnet  126_1391_9266.bnet  127_4625_35537.bnet  128_4780_46675.bnet  129_1284_4244.bnet  12_3335_33709.bnet  130_3610_17497.bnet  131_2704_18393.bnet  132_4774_66065.bnet  133_2554_25933.bnet  134_2831_27955.bnet  135_3845_40672.bnet  136_4497_29470.bnet  (+360 more)
dataset/Selected/: Cell_cycle_control_network.bnet  EMT_Mechanosensing.bnet  EMT_Mechanosensing_TGFbeta.bnet  Executable_file_for_Alzheimer_model_BCC.bnet  Executable_file_for_CaSQ_derived_MAPK_model_BCC.bnet  Executable_file_for_CaSQ_derived_mast_cell_activation_model_BCC.bnet  Executable_file_for_cholocystokinin_model_BCC.bnet  HOG_example.bnet  Insulin_example.bnet  Leishmania.bnet  T-cell_co-receptor_molecules_calcium_channel.bnet  YeastPheromoneModel.bnet  signaling-dependent-pluripotency.bnet
fASP/: __init__.py  bnet.py  fASP.py  naive.py
